Handle variable window sizes.

--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
 <section>
   <h1>More Features! [to-do]</h1>
 
-  <p>Zoom-out overview.
+  <p>Keyboard shortcuts (overrides… they already sort of work).
+  <br>Zoom-out overview.
   <br>Anchor fragments.
   <br>Auto-loading iframes for resource-expensive slides.
   <br>iOS & non-WebKit browser testing.
