--- a/index.html
+++ b/index.html
@@ -91,5 +91,5 @@
   <br>iOS & non-WebKit browser testing.
 </section>
 
-<script src="d3.js"></script>
-<script src="stack.js"></script>
+<script src="d3.v2.js"></script>
+<script src="stack.v0.js"></script>
