iOS detection and keyboard shortcuts.

--- a/index.html
+++ b/index.html
@@ -68,24 +68,32 @@
 </section>
 
 <section>
-  <h1>Snap-to Scrolling [to-do]</h1>
+  <h1>Snap-to Scrolling</h1>
 
   <p>If you stop between slides, the stack will drift to the closest slide.
 </section>
 
 <section>
-  <h1>Edge Detection [to-do]</h1>
+  <h1>Edge Detection</h1>
 
   <p>If you scroll up, the previous slide is immediately visible.
   <br>If you scroll down, the next slide is immediately visible.
-  <p>(This would be a lot easier if WebKit supported touch!)
+  <p>(This would be event better if WebKit supported touch!)
+</section>
+
+<section>
+  <h1>Keyboard Shortcuts</h1>
+
+  <p>up / down / left / right
+  <br>page up / page down
+  <br>home / end
+  <br>space / shift-space
 </section>
 
 <section>
   <h1>More Features! [to-do]</h1>
 
-  <p>Keyboard shortcuts (overrides… they already sort of work).
-  <br>Zoom-out overview.
+  <p>Zoom-out overview?
   <br>Anchor fragments.
   <br>Auto-loading iframes for resource-expensive slides.
   <br>iOS & non-WebKit browser testing.
