Fix a bug in key events.
This also cleans up the code slightly.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   <h1>Scroll-Happy</h1>
 
   <p>Scroll many slides at once with a flick of the wrist.
+  <br>Or, grab the scrollbar on the slide and jump around.
 </section>
 
 <section class="big">
@@ -88,6 +89,8 @@
   <br>page up / page down
   <br>home / end
   <br>space / shift-space
+
+  <p>Press up or down multiple times, and it does the right thing!
 </section>
 
 <section>
