Add image slide.

--- a/index.html
+++ b/index.html
@@ -21,8 +21,12 @@
   <p>Sneak a peek at the next slide by scrolling down and back.
 </section>
 
-<section data-src="alert.html">
+<section>
   <h1 style="position:absolute;bottom:0;">PEEK-A-BO! I see you!</h1>
+</section>
+
+<section style="background:url(beach.jpg);margin-left:128px;width:944px;">
+  <h1 style="position:absolute;bottom:0;color:white;">Variable-width Slides</h1>
 </section>
 
 <section>
