Fix snapping at the extremes.

--- a/index.html
+++ b/index.html
@@ -106,5 +106,5 @@
   <br>iOS & non-WebKit browser testing.
 </section>
 
-<script src="d3.v2.js"></script>
+<script src="d3.v2.js?2.7.3"></script>
 <script src="stack.v0.js"></script>
