--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
   <p>If you scroll up, the previous slide is immediately visible.
   <br>If you scroll down, the next slide is immediately visible.
-  <p>(This would be event better if WebKit supported touch!)
+  <p>(This would be more robust if WebKit supported touch events!)
 </section>
 
 <section>
