White-on-black, and shorter transitions.

--- a/index.html
+++ b/index.html
@@ -4,106 +4,93 @@
 
 @import url(stack.css);
 
+.big {
+  font-size: 128px;
+}
+
+.caption {
+  font-size: 96px;
+  text-align: center;
+  text-shadow: 0px 2px 6px rgba(0,0,0,.5);
+}
+
 </style>
 <body class="overview">
 
 <section>
-  <h1><a href="https://github.com/mbostock/stack">stack.js</a></h1>
-
-  <p>A presentation library with intuitive, scroll-based navigation.
-
-  <p style="position:absolute;bottom:0;">Built with <a href="http://mbostock.github.com/d3/">d3.js</a>.
+  <p><b>Stack</b> is a presentation library<br> with scroll-based navigation.
+  <p class="grey">Scroll down to continue.
 </section>
 
 <section>
-  <h1>Crossfades</h1>
-
-  <p>Sneak a peek at the next slide by scrolling down and back.
+  <p style="position:absolute;bottom:0;">PEEK-A-BO! I see you!</p>
 </section>
 
 <section>
-  <h1 style="position:absolute;bottom:0;">PEEK-A-BO! I see you!</h1>
-</section>
-
-<section style="background:url(beach.jpg);margin-left:128px;width:944px;">
-  <h1 style="position:absolute;bottom:0;color:white;">Variable-width Slides</h1>
-</section>
-
-<section>
-  <h1>Scroll-Happy</h1>
-
-  <p>Scroll many slides at once with a flick of the wrist.
-  <br>Or, grab the scrollbar on the slide and jump around.
-</section>
-
-<section class="big">
-  <h1>9</h1>
-</section>
-
-<section class="big">
-  <h1>8</h1>
-</section>
-
-<section class="big">
-  <h1>7</h1>
-</section>
-
-<section class="big">
-  <h1>6</h1>
-</section>
-
-<section class="big">
-  <h1>5</h1>
-</section>
-
-<section class="big">
-  <h1>4</h1>
-</section>
-
-<section class="big">
-  <h1>3</h1>
-</section>
-
-<section class="big">
-  <h1>2</h1>
-</section>
-
-<section class="big">
-  <h1>1</h1>
+  <p>You can also scroll with the keyboard:
+    <br>use the <b>arrow keys</b>,
+    <br>the <b>space bar</b>,
+    <br>or <b>page up</b> and <b>page down</b>.
+  <p class="grey">Multiple key presses will skip multiple slides.
 </section>
 
 <section>
-  <h1>Snap-to Scrolling</h1>
-
-  <p>If you stop between slides, the stack will drift to the closest slide.
+  <p>You can even grab the scroll bar!
 </section>
 
 <section>
-  <h1>Edge Detection</h1>
-
-  <p>If you scroll up, the previous slide is immediately visible.
-  <br>If you scroll down, the next slide is immediately visible.
-  <p>(This would be more robust if WebKit supported touch events!)
+  <h1 class="caption">9</h1>
 </section>
 
 <section>
-  <h1>Keyboard Shortcuts</h1>
-
-  <p>up / down / left / right
-  <br>page up / page down
-  <br>home / end
-  <br>space / shift-space
-
-  <p>Press up or down multiple times, and it does the right thing!
+  <h1 class="caption">8</h1>
 </section>
 
 <section>
-  <h1>More Features! [to-do]</h1>
+  <h1 class="caption">7</h1>
+</section>
 
-  <p>Zoom-out overview?
-  <br>Anchor fragments.
-  <br>Auto-loading iframes for resource-expensive slides.
-  <br>iOS & non-WebKit browser testing.
+<section>
+  <h1 class="caption">6</h1>
+</section>
+
+<section>
+  <h1 class="caption">5</h1>
+</section>
+
+<section>
+  <h1 class="caption">4</h1>
+</section>
+
+<section>
+  <h1 class="caption">3</h1>
+</section>
+
+<section>
+  <h1 class="caption">2</h1>
+</section>
+
+<section>
+  <h1 class="caption">1</h1>
+</section>
+
+<section style="background:url(sky.jpg);">
+  <h1 class="caption">GRATUITOUS IMAGE<br>WITH CAPTION</h1>
+</section>
+
+<section>
+  <p>If you stop between slides,<br><b>stack snaps to the closest slide</b>.
+</section>
+
+<section>
+  <p>Stack works on <b>iOS</b>, too.</b>
+</section>
+
+<section>
+  <p>Stack is made by <a href="http://bost.ocks.org/mike/" rel="author">Mike Bostock</a>
+    <br>and is available on <a href="https://github.com/mbostock/stack">GitHub</a>
+    <br>under the <a href="https://github.com/mbostock/stack/blob/gh-pages/LICENSE">BSD license</a>.
+  <p class="grey">View source to get started.
 </section>
 
 <script src="d3.v2.js?2.7.3"></script>
