--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </section>
 
 <section>
-  <p style="position:absolute;bottom:0;">PEEK-A-BO! I see you!</p>
+  <p style="position:absolute;bottom:0;">PEEK-A-BOO! I see you!</p>
 </section>
 
 <section>
