Add minified files.

--- a/index.html
+++ b/index.html
@@ -93,5 +93,5 @@
   <p class="grey">View source to get started.
 </section>
 
-<script src="d3.v2.js?2.7.3"></script>
-<script src="stack.v0.js"></script>
+<script src="d3.v3.min.js"></script>
+<script src="stack.v0.min.js"></script>
