minor: fixed tag

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 </section>
 
 <section>
-  <p>Stack works on <b>iOS</b>, too.</b>
+  <p>Stack works on <b>iOS</b>, too.</p>
 </section>
 
 <section>
