Scroll based on window height, not section height.
We naturally assume that we will need to scroll a full window to see the next
slide, so we should base scrolling on the window rather than slide height.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ a:hover {
 </section>
 
 <section>
-  <p id="follow" style="position:absolute;text-indent:-1.25em;">&larr; When this bar reaches the top,<br>the next slide will fade in.
+  <p id="follow" style="position:fixed;text-indent:-1.25em;">&larr; When this bar reaches the top,<br>the next slide will fade in.
 </section>
 
 <section style="padding:5em 9em;">
