--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width">
 <style>
 
 @import url(http://fonts.googleapis.com/css?family=PT+Serif|PT+Serif:b|PT+Serif:i);
@@ -97,7 +98,7 @@ a:hover {
 
 <section style="text-align:center;padding-top:5em;">
   <canvas></canvas>
-  <p style="position:relative;z-index:1;text-shadow:0 1px 0 #000;">Use <i>activate</i> and <i>deactivate</i> events
+  <p style="position:absolute;z-index:1;top:5em;left:0;width:100%;text-shadow:0 1px 0 #000;">Use <i>activate</i> and <i>deactivate</i> events
     <br>to enable complex animations
     <br>only when visible.
 </section>
