Hack to fix Chrome glitch.

--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@ a:hover {
     <br>to fit automatically.
 </section>
 
-<section id="lorenz" style="text-align:center;padding-top:5em;">
+<section id="lorenz" style="text-align:center;padding-top:0;">
   <canvas></canvas>
-  <p style="position:absolute;z-index:1;top:5em;left:0;width:100%;text-shadow:0 1px 0 #000;">Use <i>activate</i> and <i>deactivate</i> events
+  <p style="position:absolute;z-index:1;padding-top:5em;left:0;width:100%;text-shadow:0 1px 0 #000;">Use <i>activate</i> and <i>deactivate</i> events
     <br>to enable complex animations
     <br>only when visible.
 </section>
